[package]
name = "argmin-observer-spectator"
version = "0.1.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Spectator observer for argmin"
documentation = "https://docs.rs/argmin-observer-spectator/"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []

[dependencies]
anyhow = "1.0"
argmin = { version = "0.10.0", path = "../argmin", default-features = false, features = ["serde1"] }
spectator = { version = "0.1", path = "../spectator", default-features = false }
futures = { version = "0.3" }
time = { version = "0.3" }
tokio = { version = "1.25.0", features = ["rt", "net", "macros", "sync"] }
tokio-util = { version = "0.7.5", features = ["codec"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
argmin_testfunctions = { version = "*", path = "../argmin-testfunctions" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
