[package]
name = "argmin-py"
version = "0.1.0"
authors = ["Joris Bayer <joris.bayer@protonmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "argmin python bindings"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []


[lib]
name = "argmin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.70"
argmin_testfunctions = { version = "0.1.1", path = "../argmin-testfunctions" }
argmin = {path="../argmin", default-features=false, features=[]}
argmin-math = {path="../argmin-math", features=["ndarray_latest"]}
ndarray = { version = "0.15", features = ["serde-1"] }
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
numpy = "0.20.0"
pyo3 = {version="0.20.2", features=["extension-module", "anyhow"]}
