[package]
name = "argmin"
version = "0.10.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Numerical optimization in pure Rust"
documentation = "https://docs.rs/argmin/"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "../../README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []

[dependencies]
# Required
anyhow = "1.0"
instant = "0.1"
paste = "1"
num-traits = "0.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
thiserror = "1.0"
argmin-math = { path = "../argmin-math", version = "0.4", default-features = false, features = ["primitives"] }
# optional
ctrlc = { version = "3.2.4", features = ["termination"], optional = true }
getrandom = { version = "0.2", optional = true }
rayon = { version = "1.6.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.0"
finitediff = { version = "0.1.4", path = "../finitediff", features = ["ndarray"] }
argmin_testfunctions = { version = "0.2.0", path = "../argmin-testfunctions" }
ndarray = { version = "0.15", features = ["serde-1"] }
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
argmin-math = { path = "../argmin-math", version = "0.4", features = ["vec"] }
argmin-observer-slog = { path = "../argmin-observer-slog" }
argmin-observer-paramwriter = { path = "../argmin-observer-paramwriter" }
argmin-checkpointing-file = { path = "../argmin-checkpointing-file" }

[features]
default = []
wasm-bindgen = ["instant/wasm-bindgen", "getrandom/js"]
serde1 = ["serde", "rand_xoshiro/serde1"]
_ndarrayl = ["argmin-math/ndarray_latest"]
# When adding new features, please consider adding them to either `full` (for users)
# or `_full_dev` (only for local development, testing and computing test coverage).
full = ["default", "serde1", "ctrlc"]
_full_dev = ["full", "_ndarrayl"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["serde1"]
