[package]
name = "finitediff"
version = "0.1.4"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Finite/numerical differentiation"
documentation = "https://docs.rs/finitediff/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["differentiation", "optimization", "math", "science"]
categories = ["science"]

[dependencies]
ndarray = { version = "0.15.0", optional = true }
num = "0.4.1"
