[package]
name = "finitediff"
version = "0.2.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Finite/numerical differentiation"
documentation = "https://docs.rs/finitediff/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["differentiation", "optimization", "math", "science"]
categories = ["science"]

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.16.0", optional = true }
num = "0.4.1"
