[package]
name = "example-checkpoint"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
argmin = { version = "*", path = "../../argmin", features = ["serde1"] }
argmin-checkpointing-file = { version = "*", path = "../../checkpointing/file" }
argmin-math = { version = "*", features = ["vec"], path = "../../argmin-math" }
argmin-observer-slog = { version = "*", path = "../../observers/slog/" }
argmin_testfunctions = "*"
