[package]
name = "example-lbfgs_nalgebra"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
argmin = { version = "*", path = "../../argmin" }
argmin-math = { version = "*", features = ["nalgebra_latest"], path = "../../argmin-math" }
argmin-observer-slog = { version = "*", path = "../../observers/slog/" }
argmin_testfunctions = { version = "*", path = "../../tools/testfunctions/" }
nalgebra = "0.32.3"
