[package]
name = "example-observer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
argmin = { version = "*", path = "../../crates/argmin" }
argmin-math = { version = "*", features = ["vec"], path = "../../crates/argmin-math" }
argmin_testfunctions = { version = "*", path = "../../crates/argmin-testfunctions" }
gnuplot = "0.0.42"
instant = "0.1.12"
