[package]
name = "example-owl_qn"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
argmin = { version = "*", path = "../../argmin" }
argmin-math = { version = "*", features = ["ndarray_latest-nolinalg"], path = "../../argmin-math" }
argmin-observer-slog = { version = "*", path = "../../observers/slog/" }
argmin_testfunctions = "*"
finitediff = { version = "0.1.4", features = ["ndarray"] }
ndarray = "0.15.6"
