[package]
name = "example-paramwriter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
argmin = { version = "*", path = "../../crates/argmin" }
argmin-math = { version = "*", features = ["vec"], path = "../../crates/argmin-math" }
argmin-observer-paramwriter = { version = "*", path = "../../crates/argmin-observer-paramwriter" }
argmin_testfunctions = { version = "*", path = "../../crates/argmin-testfunctions" }
